css/style.css
/* ... */
.vantagens__circle {
    width: 7px;
    height: 7px;
    border-radius: 50%;
    background: #ccc;
}

.vantagens__circle--active {
    width: 10px;
    height: 10px;
    background: #333;
}

.vantagens__lorem {
    grid-area: lorem;
    text-align: center;
    font-size: 1.1em;
    color: #aaa;
    margin: 40px 0 60px 0;
}

.vantagens__image {
    width: 290px;
    min-height: 705px;
    margin: 0 auto;
    grid-area: image;
    background: url('../assets/images/card-hand.png');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.desktop-only {
    display: none;
}
.mobile-only {
    display: initial;
}

/* TABLET */
@media (min-width: 768px) and (max-width: 1281px) {
    #global {
        display: grid;
        grid-template-areas: 
            "header header"
            "cover cover"
            "mimos mimos"
            "descontos descontos"
            "vantagens vantagens";
    }
    
    .cover {
        display: flex;
        flex-direction: column-reverse;
        justify-content: space-around;
        align-items: center;
        padding: 40px 0 0 0;
    }
    
    .cover__image {
        margin: 0;
        height: 535px;
        width: 620px;
    }
    
    .cover__body {
        text-align: center;
        padding: 10px 0 40px 0;
    }
    
    .cover__title {
        margin: 0 auto;
        width: 90%;
    }
    
    .cover__text {
        margin: 10px auto 0 auto;
        width: 60%;
    }
    
    .mimos__body {
        text-align: center;
    }
    
    .mimos__title {
        margin: auto;
    }
    
    .pay-type {
        text-align: center;
        display: flex;
        flex-direction: column;
        align-items: center;
    }
    
    .slide {
        overflow-x: scroll;
        margin: 0 auto;
    }
    .descontos {
        display: flex;
        justify-content: center;
    }
    .descontos__container {
        width: 80%;
        flex-direction: row;
    }
    .descontos__card {
        flex-direction: column;
        text-align: center;
    }
    .descontos__image {
        margin: 0 0 20px 0;
    }

    .vantagens__container {
        grid-template-areas: 
            "title title"
            "carrossel image"
            "lorem image"
            ". image";
    }

    .vantagens__title {
        width: 80%;
    }

    .vantagens__image {
        margin: 35px 0 0 0;
    }
    
    .desktop-only {
        display: none;
    }
    .mobile-only {
        display: none;
    }
}

/* DESKTOP */
@media (min-width: 1281px) {
    #global {
        display: grid;
        grid-template-areas: 
            "header header"
            "cover cover"
            "mimos descontos"
            "vantagens vantagens";
    }
    
    .cover {
        display: flex;
        flex-direction: row-reverse;
        justify-content: space-around;
        align-items: center;
        padding: 40px 90px 0 90px;
    }
    
    .cover__image {
        margin: 0;
        height: 530px;
        width: 680px;
    }
    
    .cover__container {
        padding: 0;
        width: 30%;
    }
    
    .cover__text {
        width: 70%;
    }
    
    .mimos {
        width: calc(50vw - 130px);
        padding-left: 120px;
    }
    
    .mimos__body {
        width: 70%;
    }
    
    .slide {
        width: 100%;
        flex-wrap: wrap;
        overflow-x: hidden;
    }
    .slide__card {
        margin-bottom: 40px;
    }
    .descontos {
        width: 50vw;
        display: flex;
        justify-content: center;
    }
    .descontos__container {
        width: 80%;
        flex-direction: row;
    }
    .descontos__card {
        flex-direction: column;
        text-align: center;
    }
    .descontos__image {
        margin: 0 0 20px 0;
    }
    
    .vantagens {
        width: 100%;
        padding-left: 120px;
    }

    .vantagens__container {
        grid-template-areas: 
            "title image"
            "carrossel image"
            "lorem image";
        grid-template-columns: 50vw 1fr;
    }

    .vantagens__title {
        margin-left: 0;
        width: 50%;
        text-align: left;
    }

    .vantagens__carrossel {
        display: flex;
        justify-content: space-between;
    }

    .vantagens__item {
        width: 30%;
    }

    .vantagens__icon--left {
        background: url('../assets/icons/left.svg');
        background-position: center;
        background-size: cover;
        background-repeat: no-repeat;
    }

    .vantagens__icon--right {
        background: url('../assets/icons/right.svg');
        background-position: center;
        background-size: cover;
        background-repeat: no-repeat;
    }

    .vantagens__logo::before {
        position: absolute;
        background: #02ff5f;
        margin: -8px 0 0 100px;
        font-size: 20px;
        font-weight: bolder;
        padding: 5px 15px;
        border-radius: 40px;
    }

    .vantagens__image {
        width: 305px;
        height: 748px;
    }
    
    .mobile-only {
        display: none;
    }
    .desktop-ex {
        display: none;
    }
    .desktop-only {
        display: initial;
    }
}

